# rust-alloc-test

./: Cargo.toml  index.js  run.sh
pkg/: README.md  package.json  rust_alloc.d.ts  rust_alloc.js  rust_alloc_bg.wasm  rust_alloc_bg.wasm.d.ts
src/: lib.rs
